syntax = "proto3";

package erasurecode;


import "gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.equal_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.gostring_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.stringer_all) =  true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.verbose_equal_all) = true;

// Test options
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;

message Shard {
    bytes file_signature=1;
    bytes shard_signature=2;
    bytes shard_data = 3;
    uint64 shard_number=4;
    uint64 total_shards=5;
    uint64 minimum_needed_shards=6;
}
